<resources>
    <string name="app_name">Entourage</string>
    <string name="button_loading">Chargement…</string>
    <string name="error_not_yet_implemented">Indisponible</string>
    <string name="error_google_play_store_not_installed">Le Google Play Store n\'est pas intallé</string>
    <string name="error_application_update">La version d\'Entourage installée n\'est plus supportée. Pour pouvoir continuer à utiliser nos services et profiter de la meilleure expérience possible, veuillez la mettre à jour avec la dernière version en cliquant sur le lien suivant.</string>
    <string name="button_update_version">Mettre à jour</string>
    <string name="title_update_version">MISE A JOUR DISPONIBLE</string>
    <string name="error_no_email">Aucune messagerie mail configurée</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="button_OK">OK</string>
    <string name="accept">Accepter</string>
    <string name="decline">Refuser</string>
    <string name="send">Envoyer</string>
    <string name="register">Enregistrer</string>
    <string name="ignore">Ignorer</string>
    <string name="next">Continuer</string>
    <string name="close">Fermer</string>
    <string name="edit">Modifier</string>
    <string name="activate">Activer</string>
    <string name="view">Voir</string>
    <string name="google_api_key">AIzaSyBwBr8Zro0P1GJDeI4-VPOF3QpVg91q3uk</string>
    <string name="network_error">Vérifiez votre connexion\net réessayez plus tard</string>
    <string name="technical_error">Nous avons un petit problème…\nIl sera bientôt corrigé ;)</string>
    <string name="server_error">Nous avons un petit problème…\nIl sera très vite corrigé ;)</string>
    <string name="no_browser_error">Aucun navigateur n\'est installé</string>
    <string name="badge_count_format">%1$d</string>
    <string name="preference_file_key">ENTOURAGE_GCM_DATA</string>
    <string name="action_overlay_close">Fermer le menu Actions</string>
    <string name="plus_image_subtitle">L’essentiel, c’est la rencontre !</string>
    <string name="agir_help_button_title_alone">Voir nos conseils</string>
    <string name="agir_help_button_help_asso">Comment mobiliser les voisins ?</string>
    <string name="agir_help_button_help_others">Vous ne vous sentez pas prêt ?</string>
    <string name="agir_title_bonnes_ondes">Rejoindre les Bonnes Ondes</string>
    <string name="agir_bonnes_ondes_alone">se créer un cercle d\'amis Entourage</string>
    <string name="agir_bonnes_ondes_others">soutenir en groupe une personne isolée</string>
    <string name="tooltip_desc1">Votre fil d’actualité a été filtré en fonction de vos préférences. Modifiez vos paramètres en cliquant sur ce bouton.</string>
    <string name="tooltip_title2">Annuaire solidaire</string>
    <string name="tooltip_desc2">Besoin d’informations ? Retrouvez tous les lieux solidaires autour de vous.</string>
    <string name="cell_demand_from">Une demande de</string>
    <string name="cell_invit_from">Invité par</string>
    <string name="cell_contrib_from">Une contribution de</string>
    <string name="cell_numberOfPeople">%1$d participant</string>
    <string name="cell_numberOfPeoples">%1$d participants</string>
    <string name="show_more">Voir plus</string>
    <string name="show_more_event">Voir l\'événement</string>
    <string name="show_more_actions">Afficher plus\nde demandes et\nd’initiatives</string>
    <string name="show_more_events">Afficher plus\nd’événements</string>
    <string name="show_more_actions_ask">Voir toutes les demandes</string>
    <string name="show_more_actions_contrib">Voir tous les dons</string>
    <string name="home_title_headlines">À la une</string>
    <string name="home_title_actions">Demandes et initiatives</string>
    <string name="home_title_events">Événements</string>
    <string name="home_title_none" />
    <string name="home_title_actions_contrib">Contributions</string>
    <string name="home_title_actions_ask">Demandes</string>
    <string name="home_help_title">Entourage autrement</string>
    <string name="home_help_description">Voici comment prendre part au projet Entourage, s’il n’y a pas d’événements ou d’actions dans ta région :</string>
    <string name="home_help_button_1">Faire un don financier à\nEntourage</string>
    <string name="home_help_button_2">Devenir reporter pour\nEntourage</string>
    <string name="home_help_button_3">Parler d’Entourage</string>
    <string name="home_help_button_4">Devenir Ambassadeur</string>
    <string name="home_help_button_5">Programme LinkedOut</string>
    <string name="home_button_help_title">J’aide Entourage autrement</string>
    <string name="home_button_change_zone">Je modifie ma zone d’action</string>
    <string name="home_cell_info_demand_empty">C\'est plutôt calme ici</string>
    <string name="home_cell_info_demand_empty_button">Rechercher\nplus loin</string>
    <string name="home_help_report_description">Pour aider au déploiement futur d’Entourage dans votre région, soyez nos yeux et nos oreilles ! Partagez-nous ce que vous observez dans votre environnement.\n\nCe questionnaire couvre différentes thématiques, répondez-y autant que vous le pouvez. Si la situation évolue, vous pourrez le remplir à nouveau pour nous tenir informés.\n\nVotre collaboration est précieuse, nous vous en remercions chaleureusement !</string>
    <string name="home_button_help_title_report">Les reporters Entourage</string>
    <string name="i_participe">Participer</string>
    <string name="equip_mod">L\'équipe de modération d\'Entourage</string>
    <string name="back_button_hint">retour</string>
    <string name="button_clear_hint">effacer</string>
    <string name="my_activity">Mon activité</string>
    <string name="my_information">Mes informations</string>
    <string name="his_activity">Son activité</string>
    <string name="test">5</string>
    <string name="events">Événements</string>
    <string name="contributions">Contributions</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="birthday">Date d’anniversaire</string>
    <string name="phone">Téléphone</string>
    <string name="email">E-mail</string>
    <string name="profile">Profil</string>
    <string name="city">Ville</string>
    <string name="language">Langue</string>
    <string name="city_action_zone">Ville et zone d’action *</string>
    <string name="within">Dans un rayon de :</string>
    <string name="settings">Paramètres</string>
    <string name="my_profile">Mon profil</string>
    <string name="min_progressbar">1 km</string>
    <string name="max_progressbar">100 km</string>
    <string name="indications">* Votre zone d’action permet de définir à quelle distance vous pouvez agir et vous déplacer  </string>
    <string name="notifications">Notifications</string>
    <string name="help_about">Aide et à propos</string>
    <string name="unblock">Débloquer des membres</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="share_app">Bonjour ! Grâce au réseau Entourage, je participe à des actions solidaires entre voisins avec et sans domicile. Rejoins-moi : https://bit.ly/applientourage</string>
    <string name="edit_profile">Modifier mes informations</string>
    <string name="description">Description  (200 caractères max)</string>
    <string name="my_interests">Mes centres d’intêret</string>
    <string name="interests">Centres d’intêret</string>
    <string name="write_message">Nouveau message</string>
    <string name="ethics">Charte éthique</string>
    <string name="ambassador_program">Postuler au programme ambassadeur</string>
    <string name="donation">Faire un don</string>
    <string name="faq">FAQ</string>
    <string name="share">Partager l’application</string>
    <string name="suggest">Partager une idée</string>
    <string name="feedback">Noter l’app sur les stores</string>
    <string name="cgu">Conditions générales d’utilisation</string>
    <string name="confidentiality">Politique de Confidentialité</string>
    <string name="child_rules">Normes de protection des enfants</string>
    <string name="licence">Licence open-source</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="signing_out">Déconnexion</string>
    <string name="delete_account_dialog_title">Suppression du compte</string>
    <string name="delete_account_dialog_content">Souhaitez-vous supprimer votre compte ?</string>
    <string name="unsubscribe_title">Voulez-vous vous désabonner ?</string>
    <string name="unsubscribe_content">En vous désabonnant, vous ne recevrez plus les notifications, nouvelles, et les nouveaux événements de cette association </string>
    <string name="sign_out_dialog_title">Déconnexion</string>
    <string name="sign_out_dialog_content">Voulez-vous vous déconnecter ?</string>
    <string name="validate">Valider</string>
    <string name="mandatory"> obligatoire</string>
    <string name="title_home">Accueil</string>
    <string name="title_donations">Entraide</string>
    <string name="title_messages">Discussions</string>
    <string name="title_groups">Groupes</string>
    <string name="title_events">Evénements</string>
    <string name="share_event">Partager l\'événement dans vos groupes</string>
    <string name="share_event_label">Vous ne pouvez partager l’événement seulement aux groupes dont vous êtes membre. Votre événement sera alors visible dans le(s) groupe(s) sélectionné(s) et tous les membres d\'un groupe pourront y participer.</string>
    <string name="dont_share">Ne partager dans aucun groupe</string>
    <string name="share_in_groups">Partager dans un ou plusieurs groupes</string>
    <string name="entourage_description_fragment_title">DESCRIPTION</string>
    <string name="entourage_description_fragment_hint">Exemple : Je suis ancien employé de mairie et disponible pour aide administrative pour l’accès au logement.\nSi vous pensez avoir besoin d’aide, nous pouvons nous retrouver dans un café le weekend.</string>
    <string name="entourage_description_fragment_info">Racontez votre histoire. Les actions avec une description claire attirent plus de membres et ont plus de chances d’aboutir !</string>
    <string name="create_action_wizard_p2_title">DERNIÈRE QUESTION</string>
    <string name="create_action_wizard_p2_option1">Oui, j\'ai son accord</string>
    <string name="create_action_wizard_p2_option2">Non, pas encore</string>
    <string name="create_action_wizard_p3_title">DERNIÈRE QUESTION</string>
    <string name="create_action_wizard_p3_description">Le consentement est indispensable pour pouvoir diffuser votre action solidaire sur le réseau.\n\nVotre action est actuellement en suspens. Un modérateur va vous répondre très rapidement pour vous aider.</string>
    <string name="create_action_wizard_p3_option1">@string/next</string>
    <string name="create_action_wizard_disclaimer">La &lt;a href=\'%1$s\'>Charte éthique d’Entourage&lt;/a> vous explique pourquoi le consentement est indispensable.</string>
    <string name="user_button_confirm_changes">Confirmer</string>
    <string name="user_edit_firstname_label">Prénom</string>
    <string name="user_edit_lastname_label">Nom</string>
    <string name="user_edit_email_label">E-mail</string>
    <string name="user_photo_choose_description_title">Ajouter une photo ?</string>
    <string name="user_photo_choose_description">Avec une photo, c’est tout de suite plus sympa.\nMontrez-nous votre sourire le plus chaleureux.</string>
    <string name="user_photo_choose_photo">Choisir une photo</string>
    <string name="user_photo_take_photo">Prendre une photo</string>
    <string name="empty_description"></string>
    <string name="create_action_wizard_p2_description">Avez-vous <b>obtenu son consentement</b> pour diffuser cette action pour elle sur Entourage ?</string>
</resources>