<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:context="social.entourage.android.user.edit.UserEditProfileFragment"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_edit_profile_firstname"
        android:hint="@string/user_edit_firstname_label"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_edit_profile_lastname"
        android:hint="@string/user_edit_lastname_label"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/user_edit_profile_email"
        android:hint="@string/user_edit_email_label"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_button_confirm_changes"
        android:id="@+id/user_edit_profile_save"
        style="@style/AccentButton"/>
</LinearLayout>
