<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/pale_grey"
              android:orientation="vertical"
              tools:context="social.entourage.android.map.entourage.create.CreateEntourageDescriptionFragment">

    <social.entourage.android.view.EntourageTitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:entourageTitle="@string/entourage_description_fragment_title"
        app:entourageTitleAction="@string/validate"/>

    <EditText
        android:id="@+id/description_entourage_edittext"
        style="@style/CustomEditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autoLink="all"
        android:background="@color/white"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/entourage_description_fragment_hint"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:minLines="6"
        android:padding="10dp"
        android:textColor="@color/greyish_brown"
        android:textColorHint="@color/greyish"
        android:textSize="@dimen/entourage_font_medium"/>

    <LinearLayout
        android:id="@+id/description_entourage_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_description"
            app:srcCompat="@drawable/tip"
            app:tint="@color/accent"/>

        <TextView
            android:id="@+id/description_entourage_info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/entourage_description_fragment_info"
            android:textColor="@color/greyish_brown"
            android:textSize="@dimen/entourage_font_medium"/>
    </LinearLayout>
</LinearLayout>
