<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="social.entourage.android.entourage.create.wizard.CreateActionWizardPage2Fragment">


    <social.entourage.android.tools.view.EntourageTitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:textColor="@color/white"
        app:entourageShowSeparator="false"
        app:entourageTitle="@string/create_action_wizard_p2_title"
        app:entourageTitleCloseDrawable="@drawable/ic_baseline_arrow_back_36">

    </social.entourage.android.tools.view.EntourageTitleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/empty_description"
            android:scaleType="center"
            app:srcCompat="@drawable/guillaume_mod_rateu"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/empty_description"
            app:srcCompat="@drawable/personnage_entourage_1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/pale_grey"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/create_action_wizard_p2_description"
            android:textColor="@color/greyish_brown"
            android:textSize="@dimen/entourage_font_large"/>

        <Button
            android:id="@+id/create_action_wizard_p2_option1_button"
            style="@style/WhiteButton.RoundedCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_action_wizard_p2_option1"/>

        <Button
            android:id="@+id/create_action_wizard_p2_option2_button"
            style="@style/WhiteButton.RoundedCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_action_wizard_p2_option2"/>
    </LinearLayout>

    <TextView
        android:id="@+id/create_action_wizard_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pale_grey"
        android:padding="10dp"
        android:text="@string/create_action_wizard_disclaimer"
        android:textColor="@color/accent"/>

</LinearLayout>
