<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="social.entourage.android.old_v7.entourage.create.wizard.CreateActionWizardPage3Fragment">


    <social.entourage.android.tools.view.CustomTitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:textColor="@color/white"
        app:entourageShowSeparator="false"
        app:entourageTitle="@string/create_action_wizard_p3_title"
        app:entourageTitleCloseDrawable="@drawable/ic_baseline_arrow_back_36"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/empty_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/personnage_entourage_1" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/equip_mod"
            android:textAlignment="center"
            android:textColor="@color/accent"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/pale_grey"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/create_action_wizard_p3_description"
            android:textColor="@color/greyish_brown"
            android:textSize="@dimen/entourage_font_large"/>

        <Button
            android:id="@+id/create_action_wizard_p3_option1_button"
            style="@style/WhiteButton.RoundedCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_action_wizard_p3_option1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/create_action_wizard_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pale_grey"
        android:padding="10dp"
        android:text="@string/create_action_wizard_disclaimer"
        android:textColor="@color/accent"/>

</LinearLayout>
