<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context="social.entourage.android.user.edit.photo.PhotoChooseSourceFragment"
              android:background="@color/accent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageButton
            android:id="@+id/photo_choose_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/empty_description"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_action_back"/>

        <Button
            android:id="@+id/photo_choose_ignore_button"
            style="@style/TransparentButton.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/ignore"
            android:textAllCaps="false"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/photo_choose_photo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_description"
            android:src="@drawable/camera_square"/>

        <TextView
            android:id="@+id/photo_choose_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo_choose_photo_img"
            android:layout_marginTop="20dp"
            android:text="@string/user_photo_choose_description_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/entourage_font_xtra_large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo_choose_description_title"
            android:layout_marginTop="10dp"
            android:text="@string/user_photo_choose_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/entourage_font_medium"/>

        <Button
            style="@style/WhiteButton.RoundedCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_photo_choose_photo"
            android:id="@+id/photo_choose_photo_button"
            android:layout_above="@+id/photo_choose_take_photo_button"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_photo_take_photo"
            android:id="@+id/photo_choose_take_photo_button"
            android:layout_alignParentBottom="true"
            style="@style/WhiteButton.RoundedCorners"/>
    </RelativeLayout>

</LinearLayout>
