<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="25dp">

        <include
            layout="@layout/layout_create_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:step="@{@string/stepFive}" />

        <TextView
            android:id="@+id/title"
            style="@style/left_h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/share_event"
            tools:text="@string/share_event" />

        <TextView
            android:id="@+id/mandatory"
            style="@style/left_legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mandatory"
            tools:text="-obligatoire" />

        <TextView
            style="@style/left_legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_event_label"
            tools:text="@string/share_event_label" />

        <RadioGroup
            android:id="@+id/rb_share_in_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/dont_share"
                style="@style/left_courant_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_share" />

            <RadioButton
                android:id="@+id/share_in_groups"
                style="@style/left_courant_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_in_groups" />
        </RadioGroup>

        <include
            android:id="@+id/error"
            layout="@layout/new_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/group_photo_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            tools:itemCount="5"
            tools:listitem="@layout/new_choose_group_event_item" />
    </LinearLayout>
</layout>